--- a/emp-backend/src/main/resources/application.properties
+++ b/emp-backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/user
 spring.datasource.username=root
-spring.datasource.password=Sridharan@4334
+spring.datasource.password=Sundar@dba9018
 spring.jpa.show-sql=true
