--- a/emp-frontend/package.json
+++ b/emp-frontend/package.json
@@ -6,6 +6,7 @@
     "@chatscope/chat-ui-kit-react": "^2.0.3",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@google/generative-ai": "^0.16.0",
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
